# Targeted-Vector

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  README_zh.md  build.rs  installer.wxs  resources.wxs
Resources/assets/images/: icon.icns
Resources/config/: GameText.json  Preferences.json  enemy_advanced_train_target.json  enemy_high-speed_train_target.json  enemy_reinforced_train_target.json  enemy_train_enemy.json  enemy_train_target.json  gun_pistol.json  gun_submachine.json  level_tutorial_1-1.json  level_tutorial_1-2.json  level_tutorial_1-3.json  level_tutorial_1-4.json  level_tutorial_1-5.json  map_forest.json  map_tutorial.json  path_down.json  path_halt.json  path_left.json  path_left_lower.json  path_right.json  path_right_lower.json  path_straight.json  path_up.json  user_dev.json
src/: function.rs  main.rs  pages.rs
