[package]
name = "Targeted-Vector"
version = "1.1.0-beta.1"
edition = "2021"
authors = ["ChepleBob <Cheple_Bob@outlook.com>"]
description = "A simple shooting game."
license = "MIT"
readme = "README.md"
keywords = ["mouse", "shoot"]
repository = "https://github.com/ChepleBob30/Targeted-Vector"

[[bin]]
name = "Targeted-Vector"
path = "src/main.rs"

[package.metadata.windows]
icon = "Resources/assets/images/icon.ico"

[package.metadata.bundle]
identifier = "com.cheplebob.targetedvector"
short_description = "A simple shooting game."
name = "Targeted Vector"
version = "1.1.0"
short-version-string = "1.1"
category = "public.app-category.games"
copyright = "Copyright (C) 2025 ChepleBob. All rights reserved"
icon = ["Resources/assets/images/icon.icns"]
resources = [
    "assets",
    "config"
]

[dependencies]
egui = "0.30.0"
eframe = "0.30.0"
egui_extras = { version = "0.30.0", features = ["all_loaders"] }
kira = { version = "0.8", features = ["cpal"] }
anyhow = "1.0.97"
image = "0.25.6"
json = "0.12.4"
rfd = "0.11.0"
walkdir = "2.5.0"
whoami = "2.0.0-pre.0"
chrono = "0.4.40"

[build-dependencies]
winres = "0.1"